tests/transpiler/x/hs/bool_chain.hs
{-# LANGUAGE DuplicateRecordFields #-}
{-# LANGUAGE OverloadedRecordDot #-}
{-# LANGUAGE NoFieldSelectors #-}
-- Generated by Mochi transpiler v0.10.33 on 2025-07-21 18:46 GMT+7
boom = do
    putStrLn "boom"
    return (True)


main :: IO ()
main = do
    print ((1 < 2) && (2 < 3) && (3 < 4))
    print ((1 < 2) && (2 > 3) && boom)
    print ((1 < 2) && (2 < 3) && (3 > 4) && boom)
